customservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: customservice
spec:
  type: NodePort
  ports: 
    - targetPort: 80
      port: 80
      nodePort: 30002
  selector:
    customdeploy: customlabels
...
