nginxservice.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: nginxservice
spec: 
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30011
  selector:
    nginxdeploy: nginxlabels
...
