ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend: 
          service:
            name: nginxservice
            port:
              number: 80
      - path: /custom
        pathType: Prefix
        backend:
          service:
            name: customservice
            port:
              number: 80
...
